# esther_spark_streaming

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: data_exploration.ipynb  json_to_kafka.py  kafka_bronze_to_silver.py  kafka_to_delta.py  main.py  pipeline_files_pyspark.ipynb  test.py
